--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "axios": "1.3.3",
-    "express": "4.18.2",
-    "qs": "6.11.0"
+    "axios": "1.3.3"
   }
 }
